--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,9 +4,7 @@ BASEFLAGS = -Wall
 DEBUG_FLAGS = -g
 LIBS = -lwiringPi -lbno055_uart
 
-SOURCE = bno055_uart_init_test.c bno055_uart_system_test.c 
-
-EXE = bno055_uart_test
+$(EXE) bno055_uart_test bno055_uart_system_test
 
 release: CFLAGS = $(BASEFLAGS)
 release: $(EXE)
@@ -14,8 +12,11 @@ release: $(EXE)
 debug: CFLAGS = $(BASEFLAGS) $(DEBUG_FLAGS)
 debug: $(EXE)
 
-$(EXE): $(SOURCE)
-	$(CC) $(CFLAGS) $(SOURCE) -o $(EXE) $(LIBS)
+bno055_uart_test: bno055_uart_test.c
+	$(CC) $(CFLAGS) bno055_uart_test.c -o bno055_uart_test $(LIBS)
+
+bno055_uart_system_test: bno055_uart_system_test.c 
+	$(CC) $(CFLAGS) bno055_uart_system_test.c  -o bno055_uart_system_test $(LIBS)
 
 clean:
 	rm -f $(EXE)
