--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,7 +4,7 @@ BASEFLAGS = -Wall
 DEBUG_FLAGS = -g
 LIBS = -lwiringPi -lbno055_uart
 
-EXE = bno055_uart_test bno055_uart_system_test
+EXE = bno055_uart_init_test bno055_uart_system_test
 
 release: CFLAGS = $(BASEFLAGS)
 release: $(EXE)
@@ -12,8 +12,8 @@ release: $(EXE)
 debug: CFLAGS = $(BASEFLAGS) $(DEBUG_FLAGS)
 debug: $(EXE)
 
-bno055_uart_test: bno055_uart_test.c
-	$(CC) $(CFLAGS) bno055_uart_test.c -o bno055_uart_test $(LIBS)
+bno055_uart_init_test: bno055_uart_init_test.c
+	$(CC) $(CFLAGS) bno055_uart_init_test.c -o bno055_uart_init_test $(LIBS)
 
 bno055_uart_system_test: bno055_uart_system_test.c 
 	$(CC) $(CFLAGS) bno055_uart_system_test.c  -o bno055_uart_system_test $(LIBS)
